<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:background="@drawable/white_background_corner">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivHome"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivHome"
                    app:layout_constraintTop_toTopOf="@id/ivHome"
                    app:layout_constraintBottom_toBottomOf="@id/ivHome"
                    />

                <View
                    android:id="@+id/v1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivHome"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/ivInternal"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@id/v1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/internal_storage"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivInternal"
                    app:layout_constraintTop_toTopOf="@id/ivInternal"
                    app:layout_constraintBottom_toBottomOf="@id/ivInternal"
                    />

                <ImageView
                    android:id="@+id/ivCategory"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@id/ivInternal"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toStartOf="@id/ivdrop"
                    app:layout_constraintStart_toEndOf="@id/ivCategory"
                    app:layout_constraintTop_toTopOf="@id/ivCategory"
                    app:layout_constraintBottom_toBottomOf="@id/ivCategory"
                    />

                <ImageView
                    android:id="@+id/ivdrop"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/ivCategory"
                    app:layout_constraintBottom_toBottomOf="@id/ivCategory"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"


                    android:src="@mipmap/ic_launcher"/>

                <ImageView
                    android:id="@+id/ivRemote"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@id/ivCategory"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/remote"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                    app:layout_constraintStart_toEndOf="@id/ivRemote"
                    app:layout_constraintTop_toTopOf="@id/ivRemote"
                    app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                    />

                <ImageView
                    android:id="@+id/ivdrop1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/ivRemote"
                    app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"


                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:id="@+id/llRemote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/ivRemote"
                    app:layout_constraintStart_toStartOf="@id/ivRemote"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ftp_server"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginStart="29dp"
                        app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                        app:layout_constraintStart_toEndOf="@id/ivRemote"
                        app:layout_constraintTop_toTopOf="@id/ivRemote"
                        app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sftp_server"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="29dp"
                        app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                        app:layout_constraintStart_toEndOf="@id/ivRemote"
                        app:layout_constraintTop_toTopOf="@id/ivRemote"
                        app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Remote Computer (SMB)"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="29dp"
                        app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                        app:layout_constraintStart_toEndOf="@id/ivRemote"
                        app:layout_constraintTop_toTopOf="@id/ivRemote"
                        app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/v2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/llRemote"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/ivCate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@id/v2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toStartOf="@id/ivdrop2"
                    app:layout_constraintStart_toEndOf="@id/ivCate"
                    app:layout_constraintTop_toTopOf="@id/ivCate"
                    app:layout_constraintBottom_toBottomOf="@id/ivCate"
                    />

                <ImageView
                    android:id="@+id/ivdrop2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/ivCate"
                    app:layout_constraintBottom_toBottomOf="@id/ivCate"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"


                    android:src="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:id="@+id/llCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/ivCate"
                    app:layout_constraintStart_toStartOf="@id/ivCate"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ftp_server"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginStart="29dp"
                        app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                        app:layout_constraintStart_toEndOf="@id/ivRemote"
                        app:layout_constraintTop_toTopOf="@id/ivRemote"
                        app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sftp_server"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="29dp"
                        app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                        app:layout_constraintStart_toEndOf="@id/ivRemote"
                        app:layout_constraintTop_toTopOf="@id/ivRemote"
                        app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Remote Computer (SMB)"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="29dp"
                        app:layout_constraintEnd_toStartOf="@id/ivdrop1"
                        app:layout_constraintStart_toEndOf="@id/ivRemote"
                        app:layout_constraintTop_toTopOf="@id/ivRemote"
                        app:layout_constraintBottom_toBottomOf="@id/ivRemote"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/v3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/llCategory"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <ImageView
                    android:id="@+id/ivCat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@id/v2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toStartOf="@id/ivdrop2"
                    app:layout_constraintStart_toEndOf="@id/ivCate"
                    app:layout_constraintTop_toTopOf="@id/ivCate"
                    app:layout_constraintBottom_toBottomOf="@id/ivCate"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>